Added SugnalR; Added detail view; added updated navigation; added lgos

--- a/SimpleWebShop/appsettings.json
+++ b/SimpleWebShop/appsettings.json
@@ -1,10 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "LoggingFiles": {
+    "AllLogs": "Logs/AllLogs.txt",
+    "ErrorLogs": "Logs/ErrorLogs.txt"
   },
   "AllowedHosts": "*"
 }
