--- a/SimpleWebShop/DbSettings.json
+++ b/SimpleWebShop/DbSettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=webshopbsuir2020.database.windows.net;Database=WebShop;User Id=sergey;Password=<passw>;"
+    "DefaultConnection": "Server=webshopbsuir2020.database.windows.net;Database=WebShop;User Id=sergey;Password=iwannadie1239QA;"
   }
 }
